--- a/BancoPromericaCaso/BancoPromericaCaso/Views/Shared/_CardCitas.cshtml
+++ b/BancoPromericaCaso/BancoPromericaCaso/Views/Shared/_CardCitas.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BancoPromericaCaso.Models.citas
 
-<div class="card text-white" style="background-color: #3259C1; height: 100% !important">
+<div class="card text-white" style="background-color: #28a745; height: 100% !important">
     <div class="card-body pb-0">
         <div class="row">
             <div class="col-8">
@@ -20,8 +20,8 @@
         <h6>@Model.Descripcion</h6>
     </div>
     <div class="card-body align-bottom m-3">
-        <a class="btn btn-primary" asp-controller="citas" asp-action="Edit" asp-route-id="@Model.IdCita">Editar</a>
-        <a class="btn btn-secondary" asp-controller="citas" asp-action="Details" asp-route-id="@Model.IdCita">Ver Detalles</a>
+        <a class="btn btn-info" asp-controller="citas" asp-action="Details" asp-route-id="@Model.IdCita">Ver Detalles</a>
+        <a class="btn btn-warning" asp-controller="citas" asp-action="Edit" asp-route-id="@Model.IdCita">Editar</a>
         <a class="btn btn-danger" asp-controller="citas" asp-action="Delete" asp-route-id="@Model.IdCita">Eliminar</a>
     </div>
 </div>
