--- a/BancoPromericaCaso/BancoPromericaCaso/Views/Home/Index.cshtml
+++ b/BancoPromericaCaso/BancoPromericaCaso/Views/Home/Index.cshtml
@@ -2,7 +2,49 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card">
+                <img src="https://feriadeempleo.ucr.ac.cr/wp-content/uploads/2023/09/Cedral-1024x752.png" class="card-img-top" alt="First slide">
+                <div class="card-body">
+                    <h5 class="card-title">Establecimientos</h5>
+                    <p class="card-text">Más informacion por acá!</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <img src="https://www.promerica.fi.cr/media/429599/mapa-promerica.jpg" class="card-img-top" alt="Second slide">
+                <div class="card-body">
+                    <h5 class="card-title">Sedes</h5>
+                    <p class="card-text">Más informacion por acá!</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <img src="https://revistasumma.com/wp-content/uploads/2016/11/banco-promerica-ecuador.jpg" class="card-img-top" alt="Third slide">
+                <div class="card-body">
+                    <h5 class="card-title">Oficinas</h5>
+                    <p class="card-text">Más informacion por acá!</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
+
+<style>
+    .card {
+        height: 100%;
+        background-color: #f8f9fa; /* Set your desired background color */
+    }
+
+    .card-img-top {
+        object-fit: cover;
+        height: 200px; /* Set your desired fixed height */
+    }
+</style>
+
+
