--- a/BancoPromericaCaso/BancoPromericaCaso/Views/Login/Index.cshtml
+++ b/BancoPromericaCaso/BancoPromericaCaso/Views/Login/Index.cshtml
@@ -4,96 +4,234 @@
 }
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] Login</title>
+    <title>@ViewData["Title"] Inicio de Sesión</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PAWLunes.styles.css" asp-append-version="true" />
     <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+            font-family: Raleway, sans-serif;
+        }
+
         body {
-            background-image: url('https://resources.diariolibre.com/images/2023/09/03/img-20230903-wa0181-fb5c04d1-focus-min0.18-0.27-608-342.jpg'); 
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-color: #f8f9fa;
+            background: #fff;
         }
 
-        .login-container {
-            background-color: rgba(255, 255, 255, 0.9);
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            margin-top: 100px;
+        .container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
         }
 
-        .login-title {
-            text-align: center;
-            font-size: 24px;
-            margin-bottom: 20px;
+        .screen {
+            background: linear-gradient(90deg, #28a745, #79c15d);
+            position: relative;
+            height: 500px; /* Reducido el tamaño del formulario */
+            width: 300px; /* Reducido el tamaño del formulario */
+            box-shadow: 0px 0px 24px #28a745;
         }
 
-        .login-form label {
-            font-weight: bold;
+        .screen__content {
+            z-index: 1;
+            position: relative;
+            height: 100%;
         }
 
-        .login-form input[type="text"],
-        .login-form input[type="password"] {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 15px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            transition: border-color 0.2s;
+        .screen__background {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            z-index: 0;
+            -webkit-clip-path: inset(0 0 0 0);
+            clip-path: inset(0 0 0 0);
         }
 
-            .login-form input[type="text"]:focus,
-            .login-form input[type="password"]:focus {
-                border-color: #007bff;
-            }
+        .screen__background__shape {
+            transform: rotate(45deg);
+            position: absolute;
+        }
 
-        .login-form button[type="submit"] {
-            width: 100%;
-            padding: 10px;
-            background-color: #007bff;
-            color: #fff;
+        .screen__background__shape1 {
+            height: 420px;
+            width: 420px; 
+            background: #fff;
+            top: -50px;
+            right: 80px; 
+            border-radius: 0 72px 0 0;
+        }
+
+        .screen__background__shape2 {
+            height: 180px;
+            width: 180px;
+            background: #79c15d;
+            top: -142px;
+            right: 0;
+            border-radius: 32px;
+        }
+
+        .screen__background__shape3 {
+            height: 450px; 
+            width: 160px; 
+            background: linear-gradient(270deg, #79c15d);
+            top: -24px;
+            right: 0;
+            border-radius: 32px;
+        }
+
+        .screen__background__shape4 {
+            height: 320px; 
+            width: 160px; 
+            background: #79c15d;
+            top: 320px;
+            right: 20px; 
+            border-radius: 60px;
+        }
+
+        .login {
+            width: 240px; 
+            padding: 20px; 
+            padding-top: 80px; 
+        }
+
+        .login__field {
+            padding: 15px 0px; 
+            position: relative;
+        }
+
+        .login__icon {
+            position: absolute;
+            top: 20px;
+            color: #28a745;
+        }
+
+        .login__input {
             border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.2s;
+            border-bottom: 2px solid #D1D1D4;
+            background: none;
+            padding: 8px;
+            padding-left: 24px;
+            font-weight: 700;
+            width: 75%;
+            transition: .2s;
         }
 
-            .login-form button[type="submit"]:hover {
-                background-color: #0056b3;
+            .login__input:active,
+            .login__input:focus,
+            .login__input:hover {
+                outline: none;
+                border-bottom-color: #79c15d;
             }
+
+        .login__submit {
+            background: #fff;
+            font-size: 14px;
+            margin-top: 20px;
+            padding: 12px 16px; 
+            border-radius: 22px;
+            border: 1px solid #D4D3E8;
+            text-transform: uppercase;
+            font-weight: 700;
+            display: flex;
+            align-items: center;
+            width: 100%;
+            color: #79c15d;
+            box-shadow: 0px 2px 2px #28a745;
+            cursor: pointer;
+            transition: .2s;
+        }
+
+            .login__submit:active,
+            .login__submit:focus,
+            .login__submit:hover {
+                border-color: #28a745;
+                outline: none;
+            }
+
+        .button__icon {
+            font-size: 20px; 
+            margin-left: auto;
+            color: #28a745;
+        }
+
+        .social-login {
+            position: absolute;
+            height: 120px;
+            width: 140px; 
+            text-align: center;
+            bottom: 0px;
+            right: 0px;
+            color: #fff;
+        }
+
+        .social-icons {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .social-login__icon {
+            padding: 15px 10px; 
+            color: #fff;
+            text-decoration: none;
+            text-shadow: 0px 0px 8px #28a745;
+        }
+
+            .social-login__icon:hover {
+                transform: scale(1.5);
+            }
+
+        .transform {
+            transform: translateX(-50%);
+        }
     </style>
+
 </head>
 <body>
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                <div class="login-container">
-                    <h2 class="login-title">Iniciar Sesión</h2>
-                    <form asp-action="Login" class="login-form">
-                        <div asp-validation-summary="ModelOnly"></div>
-                        <div class="form-group">
-                            <label asp-for="Correo"></label>
-                            <input asp-for="Correo" type="text" class="form-control" />
-                            <span asp-validation-for="Correo" class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
-                            <label asp-for="Contraseña"></label>
-                            <input asp-for="Contraseña" type="password" class="form-control" />
-                            <span asp-validation-for="Contraseña" class="text-danger"></span>
-                        </div>
-                        <button class="btn btn-primary" type="submit">Iniciar Sesión</button>
-                    </form>
+        <div class="screen">
+            <div class="screen__content">
+                <form class="login">
+                    <div class="login__field">
+                        <i class="login__icon fas fa-user"></i>
+                        <input type="text" class="correo" placeholder="Correo Electrónico">
+                    </div>
+                    <div class="login__field">
+                        <i class="login__icon fas fa-lock"></i>
+                        <input type="password" class="contrasenna" placeholder="Contraseña">
+                    </div>
+                    <button class="button login__submit">
+                        <span class="button__text">Iniciar Sesión</span>
+                        <i class="button__icon fas fa-chevron-right"></i>
+                    </button>
+                </form>
+                <div class="social-login">
+                    <button><a href="#">Registrarse</a></button>
+                    <div class="social-icons">
+                        <a href="https://instagram.com/isikabatay06" class="social-login__icon fab fa-instagram"></a>
+                        <a href="#" class="social-login__icon fab fa-facebook"></a>
+                        <a href="https://twitter.com/isikabatay06" class="social-login__icon fab fa-twitter"></a>
+                    </div>
                 </div>
+            </div>
+            <div class="screen__background">
+                <span class="screen__background__shape screen__background__shape4"></span>
+                <span class="screen__background__shape screen__background__shape3"></span>
+                <span class="screen__background__shape screen__background__shape2"></span>
+                <span class="screen__background__shape screen__background__shape1"></span>
             </div>
         </div>
     </div>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
