--- a/BancoPromericaCaso/BancoPromericaCaso/Views/citas/Delete.cshtml
+++ b/BancoPromericaCaso/BancoPromericaCaso/Views/citas/Delete.cshtml
@@ -4,42 +4,32 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<div class="container mt-5">
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>citas</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaHora)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaHora)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Descripcion)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Descripcion)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.usuario)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.usuario.Nombres)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.clientes)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.clientes.CorreoElectronico)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
+    <div class="card mt-4">
+        <div class="card-body" style="color: #28a745;">
+            <h4 class="card-title">Cita Details</h4>
+            <hr />
+
+            <dl class="row">
+                <dt class="col-sm-3">Fecha y Hora:</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.FechaHora)</dd>
+
+                <dt class="col-sm-3">Descripción:</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.Descripcion)</dd>
+
+                <dt class="col-sm-3">Usuario:</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.usuario.Nombres)</dd>
+
+                <dt class="col-sm-3">Correo Electrónico:</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.clientes.CorreoElectronico)</dd>
+            </dl>
+        </div>
+    </div>
+
+    <form asp-action="Delete" class="mt-4" onsubmit="return confirm('Are you sure you want to delete this item?');">
         <input type="hidden" asp-for="IdCita" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <button type="submit" class="btn btn-danger">Eliminar</button>
+        <a asp-action="Index" class="btn btn-primary">Salir</a>
     </form>
 </div>
