--- a/BancoPromericaCaso/BancoPromericaCaso/Views/Login/Register.cshtml
+++ b/BancoPromericaCaso/BancoPromericaCaso/Views/Login/Register.cshtml
@@ -29,13 +29,14 @@
             align-items: center;
             justify-content: center;
             min-height: 100vh;
+         
         }
 
         .screen {
             background: linear-gradient(90deg, #28a745, #79c15d);
             position: relative;
-            height: 500px; /* Reducido el tamaño del formulario */
-            width: 300px; /* Reducido el tamaño del formulario */
+            height: 600px; /* Reducido el tamaño del formulario */
+            width: 400px; /* Reducido el tamaño del formulario */
             box-shadow: 0px 0px 24px #28a745;
         }
 
@@ -110,19 +111,19 @@
             display: flex;
             align-items: center;
             justify-content: center; /* Center both horizontally and vertically */
-            width: 100%;
+            width: 60%;
             color: #28a745;
             box-shadow: 0px 2px 2px #28a745;
             cursor: pointer;
             transition: .2s;
-            margin-right: 30px; /* Adjust the margin as needed */
+            margin-right: px; /* Adjust the margin as needed */
         }
 
 
 
 
         .login {
-            width: 240px; 
+            width: 400px; 
             padding: 20px; 
             padding-top: 80px; 
         }
@@ -145,7 +146,7 @@
             padding: 8px;
             padding-left: 24px;
             font-weight: 700;
-            width: 75%;
+            width: 85%;
             transition: .2s;
         }
 
@@ -168,7 +169,7 @@
             display: flex;
             align-items: center;
             justify-content: center; 
-            width: 100%;
+            width: 50%;
             color: #fff;
             box-shadow: 0px 2px 2px #28a745;
             cursor: pointer;
@@ -263,6 +264,25 @@
             border-radius: 40px;
         }
 
+        .volver__submit {
+            background: #fff;
+            font-size: 14px;
+            margin-top: 53px;
+            padding: 12px 16px;
+            border-radius: 22px;
+            border: 1px solid #28a745;
+            text-transform: uppercase;
+            font-weight: 700;
+            display: flex;
+            align-items: center;
+            justify-content: center; /* Center both horizontally and vertically */
+            width: 100%;
+            color: #28a745;
+            box-shadow: 0px 2px 2px #28a745;
+            cursor: pointer;
+            transition: .2s;
+           /* Adjust the margin as needed */
+        }
 
 
         
@@ -274,7 +294,7 @@
         <div class="screen">
             <div class="screen__content">
                 <form class="login">
-                    <h2 style="color:#28a745">Iniciar Sesion</h2>
+                    <h2 style="color:#28a745">Registrar</h2>
                     <div class="login__field">
   
                         <i class="login__icon fas fa-user"></i>
@@ -282,20 +302,30 @@
                     </div>
                     <div class="login__field">
                         <i class="login__icon fas fa-lock"></i>
-                        <input type="password" id="contrasena" class="contrasenna form-control form-control-lg" placeholder="Contraseña">
+                        <input type="password" id="contrasena" class="contrasenna form-control form-control-lg" placeholder="Nombre">
+                    </div>   
+                    <div class="login__field">
+                        <i class="login__icon fas fa-lock"></i>
+                        <input type="password" id="contrasena" class="contrasenna form-control form-control-lg" placeholder="Apellido">
+                    </div>  
+                    <div class="login__field">
+                        <i class="login__icon fas fa-lock"></i>
+                        <input type="password" id="contrasena" class="contrasenna form-control form-control-lg" placeholder="Confirmar Contraseña">
+                    </div> 
+                    <div class="login__field">
+                        <i class="login__icon fas fa-lock"></i>
+                        <input type="password" id="contrasena" class="contrasenna form-control form-control-lg" placeholder="Confirmar Contraseña">
                     </div>
                     <button class="button login__submit">
-                        <span class="button__text">Iniciar Sesión</span>
+                        <span class="button__text">Registrarse</span>
                         
                     </button>
                 </form>
                 <div class="social-login" >
-                    <button class="button register__submit"><span class="button__text">Registrar</span></button>
-                    <div class="social-icons">
-                        <a href="https://instagram.com/isikabatay06" class="social-login__icon fab fa-instagram"></a>
-                        <a href="#" class="social-login__icon fab fa-facebook"></a>
-                        <a href="https://twitter.com/isikabatay06" class="social-login__icon fab fa-twitter"></a>
-                    </div>
+                    <button class="button volver__submit">
+                        <span class="button__text">volver</span>
+
+                    </button>
                 </div>
             </div>
             <div class="screen__background">
