--- a/BancoPromericaCaso/BancoPromericaCaso/Views/Shared/_Layout.cshtml
+++ b/BancoPromericaCaso/BancoPromericaCaso/Views/Shared/_Layout.cshtml
@@ -64,6 +64,10 @@
                 transform: scale(1.2);
             }
 
+       .nav-link{
+         
+       }
+
 </style>
 <!DOCTYPE html>
 <html lang="en">
@@ -89,7 +93,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <img src="/img/bc.png" alt="" class="mx-auto" style="max-width: 10%;">
+            <img src="/img/bc.png" alt="" class="mx-auto" style="max-width: 10%; margin-left:10px">
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -102,7 +106,7 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Reportes">Reportes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Bitacoras</a>
+                        <a class="nav-link text-dark" href="#">Bitacoras</a>
                     </li>
                 </ul>
             </div>
