--- a/BancoPromericaCaso/BancoPromericaCaso/Views/Shared/_Layout.cshtml
+++ b/BancoPromericaCaso/BancoPromericaCaso/Views/Shared/_Layout.cshtml
@@ -106,7 +106,7 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Reportes">Reportes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">Bitacoras</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Bitacora" asp-action="Index">Bitacoras</a>
                     </li>
                 </ul>
             </div>
