--- a/BancoPromericaCaso/BancoPromericaCaso/Views/citas/Index.cshtml
+++ b/BancoPromericaCaso/BancoPromericaCaso/Views/citas/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<BancoPromericaCaso.Models.citas>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Citas";
 }
 
-<h1>Listado de citas</h1>
+<h1>Citas agendadas</h1>
 
 <p>
     <button type="button" class="btn btn-success"><a href="@Url.Action("Create")" class="text-white">Crear cita</a></button>
