--- a/BancoPromericaCaso/BancoPromericaCaso/Views/citas/Create.cshtml
+++ b/BancoPromericaCaso/BancoPromericaCaso/Views/citas/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BancoPromericaCaso.Models.citas
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Crear";
 }
 
 <div class="container mt-5" style="color: #28a745;">
@@ -27,12 +27,12 @@
                 </div>
 
                 <div class="form-group">
-                    <label asp-for="IdUsuario" class="control-label"></label>
+                    <label  class="control-label">Ejecutivo</label>
                     <select asp-for="IdUsuario" class="form-control" asp-items="ViewBag.Dropusuario"></select>
                 </div>
 
                 <div class="form-group">
-                    <label asp-for="IdCliente" class="control-label"></label>
+                    <label  class="control-label">Cliente</label>
                     <select asp-for="IdCliente" class="form-control" asp-items="ViewBag.Dropclientes"></select>
                 </div>
                 <br>
@@ -44,7 +44,7 @@
     </div>
 
     <div class="mt-3">
-        <a asp-action="Index" class="btn btn-primary">Salir</a>
+        <a asp-action="Index" class="btn btn-primary">Volver</a>
     </div>
 </div>
 
