--- a/BancoPromericaCaso/BancoPromericaCaso/Views/citas/Details.cshtml
+++ b/BancoPromericaCaso/BancoPromericaCaso/Views/citas/Details.cshtml
@@ -1,15 +1,15 @@
 ﻿@model BancoPromericaCaso.Models.citas
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalles";
 }
 
 <div class="container mt-5" >
-    <h1 class="mb-4">Details</h1>
+    <h1 class="mb-4">Detalles de la cita</h1>
 
     <div class="card">
         <div class="card-body" style="color: #28a745;">
-            <h4 class="card-title">Cita Details</h4>
+            <h4 class="card-title">Detalles</h4>
             <hr />
 
             <dl class="row">
@@ -29,7 +29,6 @@
     </div>
 
     <div class="mt-3">
-        <a asp-action="Index" class="btn btn-primary">Salir</a>
-        <a asp-action="Edit" asp-route-id="@Model?.IdCita" class="btn btn-warning">Editar</a>
+        <a asp-action="Index" class="btn btn-primary">Volver</a>
     </div>
 </div>
